TILMedia_AddOn_Tests/InvalidNames/package.mo
within TILMedia_AddOn_Tests;
package InvalidNames
  extends TILMedia.Internals.ClassTypes.ExamplePackage;

annotation (Icon(graphics={Polygon(
        points={{-100,-82},{-100,-100},{-80,-100},{100,80},{100,100},{80,100},{-100,-82}},
        lineColor={238,46,47},
        fillColor={255,0,0},
        fillPattern=FillPattern.Solid)}));
end InvalidNames;
